Homepage layout change

--- a/internal-research-app.html
+++ b/internal-research-app.html
@@ -69,5 +69,37 @@ title: Internal Research App
 
         </div>
     </article>
+
+    <div class="container">
+        <h3>More case studies</h3>
+        <div class="grid-row">
+            <div class="grid-column">
+                <a class="block link link--text-dark border--full rounded p4 mt3" href="/catylist-design-system/">
+                    <div class="mb3">
+                        <img src="/img/case-studies/design-system.svg" alt="Internal Research App" style="height: 120px">
+                    </div>
+                    <div class="">
+                        <h4 class="mb1">Catylist Design System →</h4>
+                        <p>I built Catylist's design system, used across multiple apps and websites, from scratch. This included competitive analysis and focusing heavily on usability and&nbsp;accessibility.</p>
+                    </div>
+                </a>
+            </div>
+            <div class="grid-column">
+                <a class="block link link--text-dark border--full rounded p4 mt3" href="/property-edit-form/">
+                    <div class="mb3">
+                        <img src="/img/case-studies/property-form.svg" alt="Internal Research App" style="height: 120px">
+                    </div>
+                    <div class="">
+                        <h4 class="mb1">Property Edit Form →</h4>
+                        <p>I designed a huge form with 100+ fields for users to submit property edits. I involved users in the processs and included several features that allowed for easy&nbsp;navigation.</p>
+                    </div>
+                </a>
+            </div>
+        </div>
+
+        <div class="mt3">
+            <a href="" class="link link--text-dark">← Return home</a>
+        </div>
+    </div>
     
 </div>
