--- a/catylist-design-system.html
+++ b/catylist-design-system.html
@@ -58,5 +58,37 @@ title: Catylist Design System
 
         </div>
     </article>
+
+    <div class="container">
+        <h3>More case studies</h3>
+        <div class="grid-row">
+            <div class="grid-column">
+                <a class="block link link--text-dark border--full rounded p4 mt3" href="/internal-research-app/">
+                    <div class="mb3">
+                        <img src="/img/case-studies/research-app-dark.svg" alt="Internal Research App" style="height: 120px">
+                    </div>
+                    <div class="">
+                        <h4 class="mb2">Internal Research App&nbsp;→</h4>
+                        <p>I designed a task-efficient app used by internal researchers at Catylist. The process included usability tests, user interviews, and field&nbsp;studies.</p>
+                    </div>
+                </a>
+            </div>
+            <div class="grid-column">
+                <a class="block link link--text-dark border--full rounded p4 mt3" href="/property-edit-form/">
+                    <div class="mb3">
+                        <img src="/img/case-studies/property-form-dark.svg" alt="Internal Research App" style="height: 120px">
+                    </div>
+                    <div class="">
+                        <h4 class="mb2">Property Edit Form →</h4>
+                        <p>I designed a huge form with 100+ fields for users to submit property edits. Included a few features that helped the user quickly find&nbsp;fields.</p>
+                    </div>
+                </a>
+            </div>
+        </div>
+
+        <div class="mt3">
+            <a href="/" class="link link--text-dark">← Return home</a>
+        </div>
+    </div>
     
 </div>
