--- a/internal-research-app.html
+++ b/internal-research-app.html
@@ -14,7 +14,7 @@ title: Internal Research App
                 <span class="block mb0"><span class="bold">Company</span>: Catylist</span>
                 <span class="block mb0"><span class="bold">Role</span>: Sole Designer & Researcher</span>
                 <span class="block mb0"><span class="bold">Timeline</span>: Several months</span>
-                <span class="block mb0"><span class="bold">Skills</span>: Usability tests, user interviews, field studies, prototypes, UI design</span>
+                <span class="block mb0"><span class="bold">Skills</span>: Usability tests, user interviews, field studies, prototypes, interface design</span>
             </section>
 
             <section>
@@ -76,29 +76,29 @@ title: Internal Research App
             <div class="grid-column">
                 <a class="block link link--text-dark border--full rounded p4 mt3" href="/catylist-design-system/">
                     <div class="mb3">
-                        <img src="/img/case-studies/design-system.svg" alt="Internal Research App" style="height: 120px">
+                        <img src="/img/case-studies/design-system-light.svg" alt="Internal Research App" style="height: 120px">
                     </div>
                     <div class="">
-                        <h4 class="mb1">Catylist Design System →</h4>
-                        <p>I built Catylist's design system, used across multiple apps and websites, from scratch. This included competitive analysis and focusing heavily on usability and&nbsp;accessibility.</p>
+                        <h4 class="mb2">Catylist Design System →</h4>
+                        <p>I built Catylist's design system from scratch, which was used across multiple apps and websites. This included coding all the HTML and&nbsp;CSS.</p>
                     </div>
                 </a>
             </div>
             <div class="grid-column">
                 <a class="block link link--text-dark border--full rounded p4 mt3" href="/property-edit-form/">
                     <div class="mb3">
-                        <img src="/img/case-studies/property-form.svg" alt="Internal Research App" style="height: 120px">
+                        <img src="/img/case-studies/property-form-dark.svg" alt="Internal Research App" style="height: 120px">
                     </div>
                     <div class="">
-                        <h4 class="mb1">Property Edit Form →</h4>
-                        <p>I designed a huge form with 100+ fields for users to submit property edits. I involved users in the processs and included several features that allowed for easy&nbsp;navigation.</p>
+                        <h4 class="mb2">Property Edit Form →</h4>
+                        <p>I designed a huge form with 100+ fields for users to submit property edits. Included a few features that helped the user quickly find&nbsp;fields.</p>
                     </div>
                 </a>
             </div>
         </div>
 
         <div class="mt3">
-            <a href="" class="link link--text-dark">← Return home</a>
+            <a href="/" class="link link--text-dark">← Return home</a>
         </div>
     </div>
     
