--- a/property-edit-form.html
+++ b/property-edit-form.html
@@ -49,5 +49,37 @@ title: Property Edit Form
 
         </div>
     </article>
+
+    <div class="container">
+        <h3>More case studies</h3>
+        <div class="grid-row">
+            <div class="grid-column">
+                <a class="block link link--text-dark border--full rounded p4 mt3" href="/internal-research-app/">
+                    <div class="mb3">
+                        <img src="/img/case-studies/research-app-dark.svg" alt="Internal Research App" style="height: 120px">
+                    </div>
+                    <div class="">
+                        <h4 class="mb2">Internal Research App&nbsp;→</h4>
+                        <p>I designed a task-efficient app used by internal researchers at Catylist. The process included usability tests, user interviews, and field&nbsp;studies.</p>
+                    </div>
+                </a>
+            </div>
+            <div class="grid-column">
+                <a class="block link link--text-dark border--full rounded p4 mt3" href="/catylist-design-system/">
+                    <div class="mb3">
+                        <img src="/img/case-studies/design-system-light.svg" alt="Internal Research App" style="height: 120px">
+                    </div>
+                    <div class="">
+                        <h4 class="mb2">Catylist Design System →</h4>
+                        <p>I built Catylist's design system from scratch, which was used across multiple apps and websites. This included coding all the HTML and&nbsp;CSS.</p>
+                    </div>
+                </a>
+            </div>
+        </div>
+
+        <div class="mt3">
+            <a href="/" class="link link--text-dark">← Return home</a>
+        </div>
+    </div>
     
 </div>
