--- a/catylist-design-system.html
+++ b/catylist-design-system.html
@@ -27,7 +27,7 @@ title: Catylist Design System
                     <li class="mb0">Improve maintainability and productivity with the design and code.</li>
                     <li>Give us a way to examine and improve modular pieces of the UI.</li>
                 </ul>
-                <p>So I presented the idea and was given permission to work on it. The goal was to create an effective system that matched the brand, and then document it for everyone's reference.</p>
+                <p>So I presented the idea and was given permission to work on it. The goal was to create an effective system that matched the brand and then document it for everyone's reference.</p>
             </section>
 
             <section>
@@ -41,7 +41,7 @@ title: Catylist Design System
                         <p class="mb0">Usability and accessibility were critical. We had lots of users who were middle-aged or older and some of them weren't as familiar with interfaces as a younger audience would have been. So clarity and accounting for issues like color blindness were important considerations.</p>
                     </aside>
                 </div>
-                <p>After creating all the components, I created a website that the team could use for reference. This site included every component broken down by category, with notes on how and where to use them, and the required HTML and CSS.</p>
+                <p>After building all the components, I created a website that the team could use for reference. This site included every component broken down by category, with notes on how and where to use them, and the required HTML and CSS.</p>
             </section>
 
             <section>
@@ -51,7 +51,7 @@ title: Catylist Design System
                     <figcaption>Screenshot of the internal website I built for the design system.</figcaption>
                 </figure>
 
-                <p>The product manager and developers were very impressed with the new system and appreciated how much clearer and more productive it made front-end development.</p>
+                <p>The product manager and developers were very impressed with the new system and appreciated how much more productive it made front-end development.</p>
                 <p>After applying this updated styling across all websites and apps, the branding and product lineup felt much more cohesive and thought out.</p>
                 <p>And of course, a design system is never finished. I continually adjusted and added to it throughout my time at Catylist.</p>
             </section>
