--- a/internal-research-app.html
+++ b/internal-research-app.html
@@ -57,10 +57,10 @@ title: Internal Research App
                 <p>The result was a highly efficient app tailored to the specific needs of its users. Managers reported that researcher productivity increased dramatically.</p>
                 <p>The product team received a lot of praise from the researchers themselves, most of whom had used other research apps and compared it very favorably to ours.</p>
                 <blockquote>
-                    <p>
-                        "This is amazing! It's so much better than any other research app I've used before."<br>
-                        – Researcher
+                    <p class="pb2">
+                        "This is amazing! It's so much better than any other research app I've used before."
                     </p>
+                    <p>– Researcher</p>
                 </blockquote>
                 <p>The company was also able to scale the research team easily and quickly with almost no complications.</p>
                 <p>The app became the driving force behind much of the value we offered to our end customers.</p>
