--- a/404.html
+++ b/404.html
@@ -1,11 +1,11 @@
 ---
 permalink: /404.html
-layout: default
+layout: page
 ---
 
-<div class="container">
+<div class="container pt10 pb10">
   <h1>404</h1>
 
-  <p><strong>Page not found :(</strong></p>
-  <p>The requested page could not be found.</p>
+  <h3 class="mb3">Page not found :(</h3>
+  <p>Return <a href="/" class="link">home</a>.</p>
 </div>
