--- a/internal-research-app.html
+++ b/internal-research-app.html
@@ -26,7 +26,7 @@ title: Internal Research App
                 <div class="aside-container">
                     <aside class="info pt4 pb4 pl5 pr5">
                         <img class="aside_icon" src="/img/info.svg" alt="Important">
-                        <p class="mb0">Researchers are all about data captured per time spent. So the focus was almost entirely on efficiency of task.</p>
+                        <p class="mb0">And the old app was very inefficient and slow. Researchers are all about data captured per time spent. So the focus for this new app was almost entirely on efficiency of task.</p>
                     </aside>
                 </div>
                 <p>The app also needed to be scalable since the research team was going to keep growing.</p>
@@ -38,8 +38,8 @@ title: Internal Research App
                     <img src="/img/case-studies/user-interview.png" alt="User Interview">
                     <figcaption>Myself interviewing a researcher.</figcaption>
                 </figure>
-                <p>Because of the complexity and standardization of their tasks, I knew I needed to work alongside the researchers and their managers to develop the app.</p>
-                <p>I used many methods to make sure all design work stemmed from user needs and wants, including the following:</p>
+                <p>Because of the complexity of their tasks, I knew I needed to work alongside the researchers and their managers to develop the app. I wanted to really dig into the workflows they used and let the design emerge out of that understanding.</p>
+                <p>I used many methods to accomplish this, including the following:</p>
                 <ul>
                     <li>Performed remote <span class="bold">usability tests and user interviews</span> with the researchers. Usually, this involved them screen sharing and demonstrating how they performed specific tasks. I analyzed these interviews using Dovetail to pull out insights that I then applied to the designs. Many ideas came from this process.</li>
                     <li>Completed <span class="bold">field studies</span>, where I met with the researchers in person and observed them as they worked so that I could learn more about the process and get a better understanding of their day-to-day.</li>
