--- a/internal-research-app.html
+++ b/internal-research-app.html
@@ -53,10 +53,10 @@ title: Internal Research App
                 <h2>Outcome</h2>
                 <figure>
                     <img src="/img/case-studies/research-app.png" alt="Research App">
-                    <figcaption>Screenshot of one of the pages from the app. Blurred for privacy.</figcaption>
+                    <figcaption>Screenshot of one of the pages from the app. Blurred for privacy and NDA.</figcaption>
                 </figure>
                 <p>The result was a highly efficient app tailored to the specific needs of its users. Managers reported that researcher productivity increased dramatically.</p>
-                <p>The product team received a lot of praise from the researchers themselves, most of whom had used other research apps and compared it very favorably to ours.</p>
+                <p>The product team received a lot of praise from the researchers themselves.</p>
                 <blockquote>
                     <p class="pb2">
                         "This is amazing! It's so much better than any other research app I've used before."
