--- a/catylist-design-system.html
+++ b/catylist-design-system.html
@@ -20,7 +20,7 @@ title: Catylist Design System
 
             <section>
                 <h2>Context & Goals</h2>
-                <p>With 12 developers and an ecosystem of websites and apps, it was clear that Catylist needed a solid design system.</p>
+                <p>Catylist had 12 developers and an ecosystem of several websites and apps, but they had never had a design system before.</p>
                 <p>I knew a design system would:</p>
                 <ul>
                     <li class="mb0">Provide design consistency.</li>
@@ -28,18 +28,18 @@ title: Catylist Design System
                     <li class="mb0">Improve maintainability and productivity with the design and code.</li>
                     <li>Give us a way to examine and improve modular pieces of the UI.</li>
                 </ul>
-                <p>So I presented the idea and was given permission to work on it. The goal was to create an effective system that matched the brand and then document it for everyone's reference.</p>
+                <p>So I pitched the idea and was given permission to work on it. The goal was to create an effective system that matched the brand and increased designer and developer productivity, and then document it for everyone's reference.</p>
             </section>
 
             <section>
                 <h2>Approach</h2>
                 <p>I met with several stakeholders to make sure we were aligned on the branding and general business requirements.</p>
                 <p>Then I began with an analysis: researching competitive design systems, recording common pieces of UI we already used regularly, and figuring out what kinds of components would make the developers' work easier.</p>
-                <p>Over a few weeks, I took the information I had gathered and built out each piece of the system one by one with HTML and CSS. I worked closely with my product manager and a couple of developers along the way. </p>
+                <p>Over a few weeks, I took the information I had gathered and built out each piece of the system one by one with HTML and CSS. I worked closely with my product manager and a couple of developers along the way.</p>
                 <div class="aside-container">
                     <aside class="info pt4 pb4 pl5 pr5">
                         <img class="aside_icon" src="/img/info.svg" alt="Important">
-                        <p class="mb0">Usability and accessibility were critical. We had lots of users who were middle-aged or older and some of them weren't as familiar with interfaces as a younger audience would have been. So clarity and accounting for issues like color blindness were important considerations.</p>
+                        <p class="mb0">I quickly realized that usability and accessibility were critical. We had lots of users who were middle-aged or older and some of them weren't as familiar with interfaces as a younger audience would have been. So clarity and accounting for issues like color blindness became important considerations.</p>
                     </aside>
                 </div>
                 <p>After building all the components, I created a website that the team could use for reference. This site included every component broken down by category, with notes on how and where to use them, and the required HTML and CSS.</p>
