--- a/catylist-design-system.html
+++ b/catylist-design-system.html
@@ -33,15 +33,15 @@ title: Catylist Design System
 
             <section>
                 <h2>Approach</h2>
-                <p>I met with several stakeholders to make sure we were aligned on the branding and general business requirements.</p>
-                <p>Then I began with an analysis: researching competitive design systems, recording common pieces of UI we already used regularly, and figuring out what kinds of components would make the developers' work easier.</p>
-                <p>Over a few weeks, I took the information I had gathered and built out each piece of the system one by one with HTML and CSS. I worked closely with my product manager and a couple of developers along the way.</p>
+                <p>I met with several stakeholders to make sure we were aligned on the branding and general business requirements. <span class="bold">I built a sound understanding of the type of impressions we wanted to make as a brand, as well as business goals of a system like this, which informed the rest of the process.</span></p>
+                <p>Then I performed with an analysis: researching competitive design systems, recording common pieces of UI we already used regularly, and figuring out what kinds of components would make the developers' work easier. <span class="bold">This helped me develop the list of components I'd need to work on.</span></p>
                 <div class="aside-container">
                     <aside class="info pt4 pb4 pl5 pr5">
                         <img class="aside_icon" src="/img/info.svg" alt="Important">
                         <p class="mb0">I quickly realized that usability and accessibility were critical. We had lots of users who were middle-aged or older and some of them weren't as familiar with interfaces as a younger audience would have been. So clarity and accounting for issues like color blindness became important considerations.</p>
                     </aside>
                 </div>
+                <p>Over a few weeks, I took the information I had gathered and built out each piece of the system one by one using HTML and CSS. I worked closely with my product manager and a couple of developers along the way to make sure I was staying on the right track.</p>
                 <p>After building all the components, I created a website that the team could use for reference. This site included every component broken down by category, with notes on how and where to use them, and the required HTML and CSS.</p>
             </section>
 
@@ -52,7 +52,7 @@ title: Catylist Design System
                     <figcaption>Screenshot of the internal website I built for the design system.</figcaption>
                 </figure>
 
-                <p>The product manager and developers were very impressed with the new system and appreciated how much more productive it made front-end development.</p>
+                <p>The product manager and developers were very impressed with the new system and appreciated how much more productive it made front-end development. It also clarified my own work and made things more consistent. I noticed over time that every adopted a shared vocabulary for how to talk about the UI, and maintainability was much easier.</p>
                 <p>After applying this updated styling across all websites and apps, the branding and product lineup felt much more cohesive and thought out.</p>
                 <p>And of course, a design system is never finished. I continually adjusted and added to it throughout my time at Catylist.</p>
             </section>
