--- a/property-edit-form.html
+++ b/property-edit-form.html
@@ -28,23 +28,23 @@ title: Property Edit Form
             <section>
                 <h2>Approach</h2>
                 <p>Designing any form can get complicated, but designing a form with 100+ fields all on the same page is quite a task.</p>
-                <p>I built a prototype with several ideas and showed it to some users and our support staff (since they were talking to users on a consistent basis). One thing I learned is that sometimes users didn't understand what some fields were referring to. So we added a notation when the user clicked on a field (see below).</p>
+                <p>So I built a prototype with several ideas and showed it to some users and our support staff (since they were talking to users on a consistent basis). <span class="bold">One thing I learned from this is that users sometimes didn't understand what some fields were referring to. So I added a notation that popped up in the sidebar when the user clicked on a field (see below).</span></p>
                 <figure>
                     <img src="/img/case-studies/form.png" alt="Form">
                     <figcaption>When a field was active, a note showed up in the sidebar explaining what that field was.</figcaption>
                 </figure>
-                <p>Since the scope of the page was so large, I designed a couple of features that made the giant page more palatable and gave the user methods to quickly find specific fields.</p>
+                <p>Users were having a hard time navigating the giant form. So I designed a couple of features that made the giant page more palatable and gave the user methods to quickly find specific fields.</p>
                 <figure>
                     <img src="/img/case-studies/form-search.png" alt="Form Search">
                     <figcaption>Key features helped users navigate the large form.</figcaption>
                 </figure>
-                <p>Finally, I put together a quick onboarding tour that pointed out new pieces of the UI, educating users about the new features.</p>
+                <p>Finally, to ensure users understood these features, I put together a quick onboarding tour that pointed out new pieces of the UI.</p>
             </section>
 
             <section>
                 <h2>Outcome</h2>
-                <p>After launch, the new page was very well received. Not only did users appreciate access to all the fields, but we received a lot of praise specifically for the design of the page. And the support team received very few requests about how to use it — a UX win!</p>
-                <p>As a company, our data significantly improved.</p>
+                <p>After launch, the new page was very well received. We received a lot of praise specifically for the design of the page. And the support team received very few requests about how to use it — a UX win!</p>
+                <p>As a company, our data significantly increased and improved.</p>
                 <p>I learned a lot about how to build usable forms, and that your support team can be a big resource as a designer.</p>
             </section>
 
