Add optimize snippet

--- a/podcastsearch.html
+++ b/podcastsearch.html
@@ -9,6 +9,7 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
 <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet">
+<script src="https://www.googleoptimize.com/optimize.js?id=OPT-KDR35K7"></script>
 </head>
 
 <body class="h-screen overflow-scroll flex items-center justify-center" style="background: #edf2f7;font-family: 'Inter', sans-serif;">
