--- a/index.html
+++ b/index.html
@@ -44,14 +44,15 @@
 
     <body class="dark-body has-animations">
 
-        <div class="container--md pt10 pb10">
-            <img class="logo" src="/img/jordan-bowman-circle.png" alt="Jordan Bowman">
-            <h1>Jordan Bowman</h1>
-            <p class="h2 mb4 heading-text-lh">A Senior Product Designer and Researcher with 8+ years constructing digital&nbsp;experiences.</p>
-            <p class="h2 heading-text-lh">I'm passionate about user-first, evidence-based&nbsp;design.</p>
-            <div class="pt2">
-                <a href="https://twitter.com/jrdnbwmn" target="_blank" class="link mr3"><img class="social-icon" src="/img/twitter.svg" alt="Twitter"></a>
-                <a href="https://www.linkedin.com/in/jrdnbwmn/" target="_blank" class="link"><img class="social-icon" src="/img/linkedin.svg" alt="LinkedIn"></a>
+        <div class="container pt10 pb10">
+            <div class="pt10 pb10">
+                <img class="logo" src="/img/jordan-bowman-circle.png" alt="Jordan Bowman">
+                <h1 class="mb3">Jordan Bowman</h1>
+                <p class="h3 mb4">I'm a Senior Product Designer with 9+ years constructing digital&nbsp;experiences, and the Co-Creator of <a href="https://uxtools.co/" class="link">UX Tools</a>.</p>
+                <div class="pt3">
+                    <a href="https://twitter.com/jrdnbwmn" target="_blank" class="link mr3"><img class="social-icon" src="/img/twitter.svg" alt="Twitter"></a>
+                    <a href="https://www.linkedin.com/in/jrdnbwmn/" target="_blank" class="link"><img class="social-icon" src="/img/linkedin.svg" alt="LinkedIn"></a>
+                </div>
             </div>
         </div>
 
