--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
         <div class="container pt10 pb10">
             <div class="pt10 pb10">
-                <img class="logo" src="/img/jordan-bowman-circle.png" alt="Jordan Bowman">
+                <img class="logo mb3" src="/img/jordan-bowman-circle.png" alt="Jordan Bowman">
                 <h1 class="mb3">Jordan Bowman</h1>
                 <p class="h3 mb4">I'm a Senior Product Designer with 9+ years constructing digital&nbsp;experiences, and the Co-Creator of <a href="https://uxtools.co/" class="link">UX Tools</a>.</p>
                 <div class="pt3">
