--- a/index.html
+++ b/index.html
@@ -44,11 +44,11 @@
 
     <body class="dark-body has-animations">
 
-        <div class="container pt10 pb10">
+        <div class="container--article pt10 pb10">
             <div class="pt10 pb10">
-                <img class="logo mb3" src="/img/jordan-bowman-circle.png" alt="Jordan Bowman">
+                <img class="logo mb4" src="/img/jordan-bowman-circle.png" alt="Jordan Bowman">
                 <h1 class="mb3">Jordan Bowman</h1>
-                <p class="h3 mb4">I'm a Senior Product Designer with 9+ years constructing digital&nbsp;experiences, and the Co-Creator of <a href="https://uxtools.co/" class="link">UX Tools</a>.</p>
+                <p class="h3 mb4" style="line-height:1.4">I'm a Senior Product Designer with 9+ years constructing digital&nbsp;experiences, and the Co-Creator of <a href="https://uxtools.co/" class="link">UX Tools</a>.</p>
                 <div class="pt3">
                     <a href="https://twitter.com/jrdnbwmn" target="_blank" class="link mr3"><img class="social-icon" src="/img/twitter.svg" alt="Twitter"></a>
                     <a href="https://www.linkedin.com/in/jrdnbwmn/" target="_blank" class="link"><img class="social-icon" src="/img/linkedin.svg" alt="LinkedIn"></a>
