--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
         <div class="container--article pt10 pb10">
             <div class="pt10 pb10">
                 <img class="logo mb4" src="/img/jordan-bowman-circle.png" alt="Jordan Bowman">
-                <h1 class="mb3">Hi, I'm Jordan.</h1>
-                <p class="h3 mb4" style="line-height:1.4">I'm a Senior Product Designer , and Co-Creator of <a href="https://uxtools.co/" class="link">UX Tools</a>.</p>
+                <h1 class="mb3">Jordan Bowman</h1>
+                <p class="h3 mb4" style="line-height:1.5">I'm a Senior Product Designer, and Co-Creator of <a href="https://uxtools.co/" class="link">UX Tools</a>.</p>
                 <div class="pt3">
                     <a href="https://twitter.com/jrdnbwmn" target="_blank" class="link mr3"><img class="social-icon" src="/img/twitter.svg" alt="Twitter"></a>
                     <a href="https://www.linkedin.com/in/jrdnbwmn/" target="_blank" class="link"><img class="social-icon" src="/img/linkedin.svg" alt="LinkedIn"></a>
