--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
 
     <body class="dark-body has-animations">
 
-        <div class="container--article pt10 pb10">
+        <div class="pt10 pb10" style="margin-left: auto;margin-right: auto;max-width: 26rem;width: 90%;">
             <div class="pt10 pb10">
-                <img class="logo mb4" src="/img/jordan-bowman-circle.png" alt="Jordan Bowman">
+                <img class="logo mb5" src="/img/jordan-bowman-circle.png" alt="Jordan Bowman">
                 <h1 class="mb3">Jordan Bowman</h1>
                 <p class="h3 mb4" style="line-height:1.5">I'm a Senior Product Designer, and Co-Creator of <a href="https://uxtools.co/" class="link">UX Tools</a>.</p>
                 <div class="pt3">
