--- a/stack.html
+++ b/stack.html
@@ -7,7 +7,7 @@ layout: default
     <div class="grid grid-cols-4 gap-4">
         <a class="border rounded-lg p-10 hover:border-slate-400 hover:bg-slate-50 duration-200" href="/stack/">
             <span class="mx-auto">
-                <svg width="70" height="70" viewBox="0 0 100 100" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <svg class="drop-shadow" width="70" height="70" viewBox="0 0 100 100" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path d="M87.5008 0H12.4992C5.60857 0.0154283 0.024016 5.60033 0 12.5V87.5C0 94.375 5.62387 100 12.4992 100H87.5008C94.3761 100 100 94.375 100 87.5V12.5C100 5.625 94.3761 0 87.5008 0Z" fill="#E44332"/>
                 <path d="M21.1972 47.3657C22.9449 46.3438 60.4894 24.4969 61.3476 23.9907C62.2059 23.4907 62.2527 21.9532 61.2852 21.3969C60.3239 20.8438 58.4982 19.7938 57.821 19.3907C56.854 18.858 55.6789 18.8722 54.725 19.4282C54.2444 19.7094 22.1647 38.3657 21.0942 38.9782C19.8053 39.7157 18.223 39.7282 16.9434 38.9782L0 29.0219V37.4844C4.11959 39.9157 14.378 45.9532 16.8622 47.3751C18.3447 48.2188 19.7647 48.2001 21.2003 47.3657" fill="white"/>
                 <path d="M21.1972 63.3654C22.9449 62.3436 60.4894 40.4967 61.3476 39.9905C62.2059 39.4905 62.2527 37.953 61.2852 37.3967C60.3239 36.8436 58.4982 35.7936 57.821 35.3905C56.854 34.8578 55.6789 34.872 54.725 35.428C54.2444 35.7092 22.1647 54.3655 21.0942 54.978C19.8053 55.7155 18.223 55.728 16.9434 54.978L0 45.0217V53.4842C4.11959 55.9155 14.378 61.953 16.8622 63.3748C18.3447 64.2186 19.7647 64.1998 21.2003 63.3654" fill="white"/>
@@ -30,21 +30,7 @@ layout: default
         </a>
         <a class="border rounded-lg p-10 hover:border-slate-400 hover:bg-slate-50 duration-200" href="/stack/">
             <span>
-                <svg width="70" height="70" viewBox="0 0 70 70" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <rect width="70" height="70" rx="14" fill="#181818"/>
-                <g clip-path="url(#clip0_1421_30)">
-                <path d="M26.3506 60.0834C30.9583 60.0834 34.6979 56.3439 34.6979 51.7362V43.3889H26.3506C21.7429 43.3889 18.0034 47.1285 18.0034 51.7362C18.0034 56.3439 21.7429 60.0834 26.3506 60.0834Z" fill="#0ACF83"/>
-                <path d="M18.0034 35.0416C18.0034 30.4339 21.7429 26.6943 26.3506 26.6943H34.6979V43.3888H26.3506C21.7429 43.3888 18.0034 39.6493 18.0034 35.0416Z" fill="#A259FF"/>
-                <path d="M18.0035 18.3473C18.0035 13.7396 21.743 10 26.3507 10H34.698V26.6945H26.3507C21.743 26.6945 18.0035 22.9549 18.0035 18.3473Z" fill="#F24E1E"/>
-                <path d="M34.6978 10H43.0451C47.6528 10 51.3923 13.7396 51.3923 18.3473C51.3923 22.9549 47.6528 26.6945 43.0451 26.6945H34.6978V10Z" fill="#FF7262"/>
-                <path d="M51.3923 35.0416C51.3923 39.6493 47.6528 43.3888 43.0451 43.3888C38.4374 43.3888 34.6978 39.6493 34.6978 35.0416C34.6978 30.4339 38.4374 26.6943 43.0451 26.6943C47.6528 26.6943 51.3923 30.4339 51.3923 35.0416Z" fill="#1ABCFE"/>
-                </g>
-                <defs>
-                <clipPath id="clip0_1421_30">
-                <rect width="33.3957" height="50.0835" fill="white" transform="translate(18 10)"/>
-                </clipPath>
-                </defs>
-                </svg>
+                <svg class="drop-shadow" fill="none" height="70" viewBox="0 0 70 70" width="70" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><linearGradient id="a" gradientUnits="userSpaceOnUse" x1="34.7682" x2="34.7682" y1="70" y2="0"><stop offset="0" stop-color="#1b1b1b"/><stop offset="1" stop-color="#323232"/></linearGradient><rect fill="url(#a)" height="70" rx="11.6667" width="70"/><path d="m35.0478 34.5717c0-4.6596 3.7773-8.4371 8.4371-8.4371 4.6596 0 8.4371 3.7775 8.4371 8.4371 0 4.6597-3.7775 8.4371-8.4371 8.4371-4.6598 0-8.4371-3.7774-8.4371-8.4371z" fill="#1abcfe"/><path d="m18.1736 51.4459c0-4.6596 3.7774-8.4371 8.4371-8.4371h8.4371v8.4371c0 4.6597-3.7774 8.4371-8.4371 8.4371s-8.4371-3.7774-8.4371-8.4371z" fill="#0acf83"/><path d="m35.0478 9.26044v16.87416h8.4371c4.6597 0 8.4371-3.7774 8.4371-8.4371 0-4.6596-3.7774-8.43706-8.4371-8.43706z" fill="#ff7262"/><path d="m18.1736 17.6975c0 4.6597 3.7774 8.4371 8.4371 8.4371h8.4371v-16.87422h-8.4371c-4.6597 0-8.4371 3.77742-8.4371 8.43712z" fill="#f24e1e"/><path d="m18.1736 34.5717c0 4.6597 3.7774 8.4371 8.4371 8.4371h8.4371v-16.8742h-8.4371c-4.6597 0-8.4371 3.7775-8.4371 8.4371z" fill="#a259ff"/></svg>
             </span>
             <p class="text-xl mt-10">Figma</p>
             <p class="mt-4">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
@@ -62,9 +48,9 @@ layout: default
         </a>
         <a class="border rounded-lg p-10 hover:border-slate-400 hover:bg-slate-50 duration-200" href="/stack/">
             <span>
-                <img src="https://images.saasworthy.com/typefully_11776_logo_1635763059_1mn07.png" alt="" style="width:70px">
+                <svg class="drop-shadow" fill="none" height="70" viewBox="0 0 70 70" width="70" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><clipPath id="a"><path d="m8.66943 8.6698h52.9817v52.9817h-52.9817z"/></clipPath><rect fill="#fff" height="70" rx="13" width="70"/><g clip-path="url(#a)"><path d="m45.5161 9.92358-33.3838 2.78202 1.4308 36.0068 7.3126 10.969 37.676-2.941v-37.4376z" fill="#fff"/><path d="m18.5126 17.9593c1.6468 1.3378 2.2649 1.2362 5.36 1.0287l29.173-1.7506c.6181 0 .1037-.6181-.1016-.7196l-4.8478-3.5034c-.9272-.7197-2.1656-1.5453-4.5365-1.34l-28.2459 2.0618c-1.0287.1016-1.2362.6182-.8256 1.0288zm1.7506 6.7993v30.6941c0 1.649.8234 2.2671 2.68 2.1634l32.0605-1.8544c1.8566-.1015 2.0641-1.2362 2.0641-2.5762v-30.4887c0-1.3378-.5144-2.0597-1.6513-1.9582l-33.5043 1.9582c-1.2362.1037-1.649.7218-1.649 2.0596zm31.6499 1.6447c.2053.9271 0 1.8543-.9272 1.9603l-1.5453.309v22.6585c-1.3422.7219-2.5784 1.1347-3.6094 1.1347-1.6512 0-2.064-.5166-3.3003-2.0596l-10.104-15.8636v15.347l3.1965.7241s0 1.8543-2.5784 1.8543l-7.1128.4106c-.2053-.4106 0-1.4415.7219-1.6468l1.8544-.5144v-20.2942l-2.5719-.2075c-.2075-.9271.3091-2.2649 1.7506-2.3687l7.6294-.5144 10.5168 16.0689v-14.2167l-2.6821-.3069c-.2054-1.1346.6181-1.9581 1.649-2.0596zm-38.9702-15.4486 29.3827-2.16342c3.6072-.30906 4.5366-.10376 6.8037 1.54532l9.38 6.5918c1.5453 1.1325 2.0619 1.4415 2.0619 2.6778v36.1555c0 2.265-.8234 3.6072-3.7087 3.8103l-34.1246 2.0618c-2.1634.1038-3.1966-.2053-4.3313-1.649l-6.9075-8.9627c-1.2362-1.6491-1.75056-2.8831-1.75056-4.3269v-32.1378c0-1.8521.82566-3.3996 3.19436-3.6027z" fill="#000"/></g></svg>
             </span>
-            <p class="text-xl mt-10">Typefully</p>
+            <p class="text-xl mt-10">Notion</p>
             <p class="mt-4">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
             <!-- <div class="mt-10">
                 <div class="inline-block bg-amber-100 pt-1 pb-1 pl-2 pr-2 rounded-lg border border-amber-600 mr-1 mb-1">
@@ -79,7 +65,22 @@ layout: default
             </div> -->
         </a>
         <a class="border rounded-lg p-10 hover:border-slate-400 hover:bg-slate-50 duration-200" href="/stack/">
-            Card
+            <span>
+                <svg class="drop-shadow" fill="none" height="70" viewBox="0 0 70 70" width="70" xmlns="http://www.w3.org/2000/svg"><rect fill="#f43e37" height="70" rx="13" width="70"/><path d="m35.25 54.9375c-3.8938 0-7.7002-1.1546-10.9378-3.3179s-5.761-5.2381-7.2511-8.8355-1.8799-7.5559-1.1203-11.3749 2.6347-7.327 5.388-10.0804c2.7534-2.7533 6.2614-4.6284 10.0804-5.388s7.7775-.3698 11.3749 1.1203 6.6722 4.0135 8.8355 7.2511 3.3179 7.044 3.3179 10.9378h6.5625c0-5.1917-1.5395-10.2669-4.4239-14.5837s-6.9841-7.6813-11.7806-9.6681c-4.7966-1.98683-10.0746-2.50666-15.1666-1.4938-5.092 1.0129-9.7693 3.5129-13.4404 7.1841-3.6712 3.6711-6.1712 8.3484-7.1841 13.4404-1.01286 5.092-.49303 10.37 1.4938 15.1666 1.9868 4.7965 5.3513 8.8962 9.6681 11.7806s9.392 4.4239 14.5837 4.4239zm0-9.707c-1.9739 0-3.9036-.5854-5.5448-1.682-1.6413-1.0967-2.9205-2.6554-3.6759-4.4791s-.9531-3.8305-.568-5.7665 1.3357-3.7144 2.7315-5.1101c1.3957-1.3958 3.1741-2.3464 5.1101-2.7315s3.9428-.1874 5.7665.568 3.3824 2.0346 4.4791 3.6759c1.0966 1.6412 1.682 3.5709 1.682 5.5448h5.7422c0-3.1096-.9221-6.1494-2.6498-8.735-1.7276-2.5856-4.1831-4.6008-7.0561-5.7908-2.8729-1.19-6.0342-1.5014-9.0841-.8947-3.0499.6066-5.8514 2.1041-8.0503 4.3029-2.1988 2.1989-3.6963 5.0004-4.3029 8.0503-.6067 3.0499-.2953 6.2112.8947 9.0841 1.19 2.873 3.2052 5.3285 5.7908 7.0561 2.5856 1.7277 5.6254 2.6498 8.735 2.6498z" fill="#fff"/></svg>
+            </span>
+            <p class="text-xl mt-10">Pocket Casts</p>
+            <p class="mt-4">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+            <!-- <div class="mt-10">
+                <div class="inline-block bg-amber-100 pt-1 pb-1 pl-2 pr-2 rounded-lg border border-amber-600 mr-1 mb-1">
+                    <span class="text-amber-600 text-sm font-medium"># productivity</span>
+                </div>
+                <div class="inline-block bg-sky-100 pt-1 pb-1 pl-2 pr-2 rounded-lg border border-sky-600 mr-1 mb-1">
+                    <span class="text-sky-600 text-sm font-medium"># work</span>
+                </div>
+                <div class="inline-block bg-emerald-100 pt-1 pb-1 pl-2 pr-2 rounded-lg border border-emerald-600 mr-1 mb-1">
+                    <span class="text-emerald-600 text-sm font-medium"># design</span>
+                </div>
+            </div> -->
         </a>
     </div>
 </div>
