--- a/stack.html
+++ b/stack.html
@@ -3,7 +3,7 @@ layout: default
 ---
 
 <div class="p-14">
-    <h1 class="text-2xl mb-6">Personal Stack</h1>
+    <h1 class="text-2xl mb-6">Personal Tool Stack</h1>
     <div class="grid grid-cols-4 gap-4">
         <a class="border rounded-lg p-10 hover:border-slate-400 hover:bg-slate-50 duration-200" href="/stack/">
             <span class="mx-auto">
@@ -69,6 +69,114 @@ layout: default
                 <svg class="drop-shadow" fill="none" height="70" viewBox="0 0 70 70" width="70" xmlns="http://www.w3.org/2000/svg"><rect fill="#f43e37" height="70" rx="13" width="70"/><path d="m35.25 54.9375c-3.8938 0-7.7002-1.1546-10.9378-3.3179s-5.761-5.2381-7.2511-8.8355-1.8799-7.5559-1.1203-11.3749 2.6347-7.327 5.388-10.0804c2.7534-2.7533 6.2614-4.6284 10.0804-5.388s7.7775-.3698 11.3749 1.1203 6.6722 4.0135 8.8355 7.2511 3.3179 7.044 3.3179 10.9378h6.5625c0-5.1917-1.5395-10.2669-4.4239-14.5837s-6.9841-7.6813-11.7806-9.6681c-4.7966-1.98683-10.0746-2.50666-15.1666-1.4938-5.092 1.0129-9.7693 3.5129-13.4404 7.1841-3.6712 3.6711-6.1712 8.3484-7.1841 13.4404-1.01286 5.092-.49303 10.37 1.4938 15.1666 1.9868 4.7965 5.3513 8.8962 9.6681 11.7806s9.392 4.4239 14.5837 4.4239zm0-9.707c-1.9739 0-3.9036-.5854-5.5448-1.682-1.6413-1.0967-2.9205-2.6554-3.6759-4.4791s-.9531-3.8305-.568-5.7665 1.3357-3.7144 2.7315-5.1101c1.3957-1.3958 3.1741-2.3464 5.1101-2.7315s3.9428-.1874 5.7665.568 3.3824 2.0346 4.4791 3.6759c1.0966 1.6412 1.682 3.5709 1.682 5.5448h5.7422c0-3.1096-.9221-6.1494-2.6498-8.735-1.7276-2.5856-4.1831-4.6008-7.0561-5.7908-2.8729-1.19-6.0342-1.5014-9.0841-.8947-3.0499.6066-5.8514 2.1041-8.0503 4.3029-2.1988 2.1989-3.6963 5.0004-4.3029 8.0503-.6067 3.0499-.2953 6.2112.8947 9.0841 1.19 2.873 3.2052 5.3285 5.7908 7.0561 2.5856 1.7277 5.6254 2.6498 8.735 2.6498z" fill="#fff"/></svg>
             </span>
             <p class="text-xl mt-10">Pocket Casts</p>
+            <p class="mt-4">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+            <!-- <div class="mt-10">
+                <div class="inline-block bg-amber-100 pt-1 pb-1 pl-2 pr-2 rounded-lg border border-amber-600 mr-1 mb-1">
+                    <span class="text-amber-600 text-sm font-medium"># productivity</span>
+                </div>
+                <div class="inline-block bg-sky-100 pt-1 pb-1 pl-2 pr-2 rounded-lg border border-sky-600 mr-1 mb-1">
+                    <span class="text-sky-600 text-sm font-medium"># work</span>
+                </div>
+                <div class="inline-block bg-emerald-100 pt-1 pb-1 pl-2 pr-2 rounded-lg border border-emerald-600 mr-1 mb-1">
+                    <span class="text-emerald-600 text-sm font-medium"># design</span>
+                </div>
+            </div> -->
+        </a>
+        <a class="border rounded-lg p-10 hover:border-slate-400 hover:bg-slate-50 duration-200" href="/stack/">
+            <span>
+                <img class="rounded-lg drop-shadow w-[70px] h-[70px]" src="/assets/img/stack/cron.png" alt="Cron">
+            </span>
+            <p class="text-xl mt-10">Cron</p>
+            <p class="mt-4">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+            <!-- <div class="mt-10">
+                <div class="inline-block bg-amber-100 pt-1 pb-1 pl-2 pr-2 rounded-lg border border-amber-600 mr-1 mb-1">
+                    <span class="text-amber-600 text-sm font-medium"># productivity</span>
+                </div>
+                <div class="inline-block bg-sky-100 pt-1 pb-1 pl-2 pr-2 rounded-lg border border-sky-600 mr-1 mb-1">
+                    <span class="text-sky-600 text-sm font-medium"># work</span>
+                </div>
+                <div class="inline-block bg-emerald-100 pt-1 pb-1 pl-2 pr-2 rounded-lg border border-emerald-600 mr-1 mb-1">
+                    <span class="text-emerald-600 text-sm font-medium"># design</span>
+                </div>
+            </div> -->
+        </a>
+        <a class="border rounded-lg p-10 hover:border-slate-400 hover:bg-slate-50 duration-200" href="/stack/">
+            <span>
+                <img class="rounded-lg w-[74px] h-[74px]" src="/assets/img/stack/cleanshotx.png" alt="Cleanshot X">
+            </span>
+            <p class="text-xl mt-10">Cleanshot X</p>
+            <p class="mt-4">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+            <!-- <div class="mt-10">
+                <div class="inline-block bg-amber-100 pt-1 pb-1 pl-2 pr-2 rounded-lg border border-amber-600 mr-1 mb-1">
+                    <span class="text-amber-600 text-sm font-medium"># productivity</span>
+                </div>
+                <div class="inline-block bg-sky-100 pt-1 pb-1 pl-2 pr-2 rounded-lg border border-sky-600 mr-1 mb-1">
+                    <span class="text-sky-600 text-sm font-medium"># work</span>
+                </div>
+                <div class="inline-block bg-emerald-100 pt-1 pb-1 pl-2 pr-2 rounded-lg border border-emerald-600 mr-1 mb-1">
+                    <span class="text-emerald-600 text-sm font-medium"># design</span>
+                </div>
+            </div> -->
+        </a>
+        <a class="border rounded-lg p-10 hover:border-slate-400 hover:bg-slate-50 duration-200" href="/stack/">
+            <span>
+                <img class="drop-shadow w-[70px] h-[70px]" src="/assets/img/stack/hyper.png" alt="Hyper">
+            </span>
+            <p class="text-xl mt-10">Hyper</p>
+            <p class="mt-4">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+            <!-- <div class="mt-10">
+                <div class="inline-block bg-amber-100 pt-1 pb-1 pl-2 pr-2 rounded-lg border border-amber-600 mr-1 mb-1">
+                    <span class="text-amber-600 text-sm font-medium"># productivity</span>
+                </div>
+                <div class="inline-block bg-sky-100 pt-1 pb-1 pl-2 pr-2 rounded-lg border border-sky-600 mr-1 mb-1">
+                    <span class="text-sky-600 text-sm font-medium"># work</span>
+                </div>
+                <div class="inline-block bg-emerald-100 pt-1 pb-1 pl-2 pr-2 rounded-lg border border-emerald-600 mr-1 mb-1">
+                    <span class="text-emerald-600 text-sm font-medium"># design</span>
+                </div>
+            </div> -->
+        </a>
+        <a class="border rounded-lg p-10 hover:border-slate-400 hover:bg-slate-50 duration-200" href="/stack/">
+            <span>
+                <svg class="drop-shadow" fill="none" height="70" viewBox="0 0 70 70" width="70" xmlns="http://www.w3.org/2000/svg"><rect fill="#05010d" height="70" rx="13" width="70"/><path clip-rule="evenodd" d="m62.0961 34.5387-2.8725 2.8757-10.8984-10.8983v-5.7483zm-27.5292-27.5387-2.8726 2.87573 10.8952 10.89517h5.7483zm-6.165 6.1681-2.8757 2.8726 4.7302 4.7302h5.7483zm19.9359 19.9358v5.7484l4.7302 4.7302 2.8757-2.8726zm-1.6572 10.6759 1.6446-1.6477h-21.3737v-21.3643l-1.6477 1.6477-3.0825-3.0699-2.8726 2.8757 3.0825 3.0825-1.6478 1.6321v3.2923l-4.7302-4.7302-2.8757 2.8757 7.6059 7.6028v6.5785l-10.89514-10.8889-2.88826 2.8726 27.5669 27.5418 2.8757-2.8726-10.8983-10.8983h6.5784l7.6029 7.6028 2.8757-2.8757-4.7302-4.7303h3.2923l1.6478-1.6477 3.0824 3.0825 2.8726-2.8757z" fill="#ff6363" fill-rule="evenodd"/></svg>
+            </span>
+            <p class="text-xl mt-10">Raycast</p>
+            <p class="mt-4">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+            <!-- <div class="mt-10">
+                <div class="inline-block bg-amber-100 pt-1 pb-1 pl-2 pr-2 rounded-lg border border-amber-600 mr-1 mb-1">
+                    <span class="text-amber-600 text-sm font-medium"># productivity</span>
+                </div>
+                <div class="inline-block bg-sky-100 pt-1 pb-1 pl-2 pr-2 rounded-lg border border-sky-600 mr-1 mb-1">
+                    <span class="text-sky-600 text-sm font-medium"># work</span>
+                </div>
+                <div class="inline-block bg-emerald-100 pt-1 pb-1 pl-2 pr-2 rounded-lg border border-emerald-600 mr-1 mb-1">
+                    <span class="text-emerald-600 text-sm font-medium"># design</span>
+                </div>
+            </div> -->
+        </a>
+        <a class="border rounded-lg p-10 hover:border-slate-400 hover:bg-slate-50 duration-200" href="/stack/">
+            <span>
+                <img class="drop-shadow w-[70px] h-[70px]" src="/assets/img/stack/1password.png" alt="1Password">
+            </span>
+            <p class="text-xl mt-10">1Password</p>
+            <p class="mt-4">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+            <!-- <div class="mt-10">
+                <div class="inline-block bg-amber-100 pt-1 pb-1 pl-2 pr-2 rounded-lg border border-amber-600 mr-1 mb-1">
+                    <span class="text-amber-600 text-sm font-medium"># productivity</span>
+                </div>
+                <div class="inline-block bg-sky-100 pt-1 pb-1 pl-2 pr-2 rounded-lg border border-sky-600 mr-1 mb-1">
+                    <span class="text-sky-600 text-sm font-medium"># work</span>
+                </div>
+                <div class="inline-block bg-emerald-100 pt-1 pb-1 pl-2 pr-2 rounded-lg border border-emerald-600 mr-1 mb-1">
+                    <span class="text-emerald-600 text-sm font-medium"># design</span>
+                </div>
+            </div> -->
+        </a>
+        <a class="border rounded-lg p-10 hover:border-slate-400 hover:bg-slate-50 duration-200" href="/stack/">
+            <span>
+                <svg class="drop-shadow" fill="none" height="70" viewBox="0 0 70 70" width="70" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><mask id="a" height="29" maskUnits="userSpaceOnUse" width="29" x="7" y="29"><path d="m21.1555 29.2231c3.7543 0 7.3548 1.4914 10.0095 4.1461 2.6546 2.6547 4.146 6.2552 4.146 10.0094v14.1556h-14.1555c-3.7543 0-7.3548-1.4914-10.0094-4.1461-2.65472-2.6547-4.1461-6.2552-4.1461-10.0095 0-3.7542 1.49138-7.3547 4.1461-10.0094 2.6546-2.6547 6.2551-4.1461 10.0094-4.1461z" fill="#fff"/></mask><mask id="b" height="29" maskUnits="userSpaceOnUse" width="29" x="35" y="29"><path d="m35.311 57.5342v-14.1555l.006-.4024c.0791-2.7814.9762-5.4779 2.5791-7.7523 1.603-2.2745 3.8408-4.0261 6.4337-5.0359 2.5929-1.0097 5.4258-1.233 8.1449-.6417 2.719.5913 5.2035 1.9708 7.1429 3.9662 1.9394 1.9953 3.2477 4.518 3.7614 7.2527.5137 2.7348.21 5.5603-.8731 8.1234-1.0832 2.5631-2.8977 4.7502-5.2168 6.2878-2.3191 1.5377-5.04 2.3577-7.8226 2.3577z" fill="#fff"/></mask><rect fill="#fff" height="70" rx="13" width="70"/><path clip-rule="evenodd" d="m49.0077 18.3463c7.565 7.3504 7.565 19.2664 0 26.6168-.2533.2459-.5111.4843-.7734.7138l-12.9232 11.8578-12.9232-11.8578c-.2623-.2295-.5215-.4679-.7748-.7138-7.5635-7.3489-7.5635-19.2664 0-26.6168 7.565-7.3504 19.8311-7.3504 27.3946 0z" fill="#0b7ed0" fill-rule="evenodd"/><g mask="url(#a)"><path d="m21.1555 29.2231c3.7543 0 7.3548 1.4914 10.0095 4.1461 2.6546 2.6547 4.146 6.2552 4.146 10.0094v14.1556h-14.1555c-3.7543 0-7.3548-1.4914-10.0094-4.1461-2.65472-2.6547-4.1461-6.2552-4.1461-10.0095 0-3.7542 1.49138-7.3547 4.1461-10.0094 2.6546-2.6547 6.2551-4.1461 10.0094-4.1461z" fill="#2cd4ed"/><path clip-rule="evenodd" d="m49.0077 18.3439c7.565 7.3504 7.565 19.2678 0 26.6183-.2533.2458-.5111.4828-.7734.7122l-12.9232 11.8594-12.9232-11.8594c-.2623-.2294-.5215-.4664-.7748-.7122-7.5635-7.3505-7.5635-19.2664 0-26.6183 7.565-7.3505 19.8311-7.3505 27.3946 0z" fill="#0db4e2" fill-rule="evenodd"/></g><g mask="url(#b)"><path d="m35.311 57.5342v-14.1555l.006-.4024c.0791-2.7814.9762-5.4779 2.5791-7.7523 1.603-2.2745 3.8408-4.0261 6.4337-5.0359 2.5929-1.0097 5.4258-1.233 8.1449-.6417 2.719.5913 5.2035 1.9708 7.1429 3.9662 1.9394 1.9953 3.2477 4.518 3.7614 7.2527.5137 2.7348.21 5.5603-.8731 8.1234-1.0832 2.5631-2.8977 4.7502-5.2168 6.2878-2.3191 1.5377-5.04 2.3577-7.8226 2.3577z" fill="#3169ff"/><path clip-rule="evenodd" d="m49.0077 18.3439c7.565 7.3504 7.565 19.2678 0 26.6183-.2533.2458-.5111.4828-.7734.7122l-12.9232 11.8594-12.9232-11.8594c-.2623-.2294-.5215-.4664-.7748-.7122-7.5635-7.3505-7.5635-19.2664 0-26.6183 7.565-7.3505 19.8311-7.3505 27.3946 0z" fill="#3153ff" fill-rule="evenodd"/></g></svg>
+            </span>
+            <p class="text-xl mt-10">Raindrop</p>
             <p class="mt-4">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
             <!-- <div class="mt-10">
                 <div class="inline-block bg-amber-100 pt-1 pb-1 pl-2 pr-2 rounded-lg border border-amber-600 mr-1 mb-1">
