--- a/index.html
+++ b/index.html
@@ -1,7 +1,22 @@
 ---
-layout: default
+layout: plain
 ---
 
-<div class="text-center">
-    Content
+<div class="container max-w-2xl mx-auto py-24">
+    <img class="max-w-16 mb-12" src="/assets/img/jordan-bowman-circle.png" alt="Jordan Bowman">
+    <div class="mb-12">
+        <h1 class="font-bold text-3xl mb-2">Jordan Bowman</h1>
+        <p>Senior Product Designer</p>
+    </div>
+    <div>
+        <a class="inline-block mr-4" href="https://linkedin.com/in/jrdnbwmn">
+            <img src="/assets/img/linkedin.svg" alt="LinkedIn">
+        </a>
+        <a class="inline-block mr-4" href="https://twitter.com/jrdnbwmn">
+            <img src="/assets/img/twitter.svg" alt="Twitter">
+        </a>
+        <a class="inline-block" href="https://mastodon.design/@jrdnbwmn">
+            <img src="/assets/img/mastodon.svg" alt="Mastodon">
+        </a>
+    </div>
 </div>
