Playing around with new layout

--- a/stash.html
+++ b/stash.html
@@ -3,8 +3,11 @@ layout: default
 active: stash
 ---
 
-<div class="p-14">
-    <h1 class="text-2xl mb-6">Stash</h1>
+<div class="container mx-auto px-4 max-w-6xl">
+<div class="py-24 mb-12">
+    <h1 class="text-5xl font-bold mb-6">Stash</h1>
+    <p class="text-2xl max-w-2xl">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Causa autem fuit huc veniendi ut quosdam.</p>
+</div>
     <div class="columns-3 gap-4 w-full">
 
         {% for stash in site.stash %}
