--- a/tools.html
+++ b/tools.html
@@ -3,8 +3,11 @@ layout: default
 active: tools
 ---
 
-<div class="p-14">
-    <h1 class="text-2xl mb-6">Personal Tool Stack</h1>
+<div class="container mx-auto px-4 max-w-6xl">
+    <div class="py-24 mb-12">
+        <h1 class="text-5xl font-bold mb-6">Personal Tool Stack</h1>
+        <p class="text-2xl max-w-2xl">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Causa autem fuit huc veniendi ut quosdam.</p>
+    </div>
     <div class="grid grid-cols-4 gap-4">
 
         {% for tool in site.tools %}
