Change to pinboard

--- a/pinboard.html
+++ b/pinboard.html
@@ -12,7 +12,7 @@ active: stash
             {%- include nav.html -%}
             <div class="container mx-auto px-4 max-w-6xl">
                 <div class="pt-12 pb-24 mb-36">
-                    <h1 class="text-5xl font-bold mb-6">Stash</h1>
+                    <h1 class="text-5xl font-bold mb-6">Pinboard</h1>
                     <p class="text-2xl max-w-2xl">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Causa autem fuit huc veniendi ut quosdam.</p>
                 </div>
                 <div class="columns-3 gap-4 w-full">
