--- a/workbooks.html
+++ b/workbooks.html
@@ -8,11 +8,11 @@ active: workbooks
     {%- include head.html -%}
     <body>
         <div>
-            <div class="absolute bottom-0 left-0 h-160 w-full bg-blue-50/90 skew-y-[-3deg] -z-10 -top-60"></div>
+            <div class="absolute bottom-0 left-0 h-160 w-full bg-blue-50/90 skew-y-[-3deg] -z-10 -top-40"></div>
             {%- include nav.html -%}
             <div class="container mx-auto px-4 max-w-6xl">
-                <div class="pt-12 pb-24 mb-36">
-                    <h1 class="text-5xl font-bold mb-6">Workbooks</h1>
+                <div class="pt-20 pb-28 mb-36">
+                    <h1 class="text-5xl font-bold mb-6 font-display font-extrabold">Workbooks</h1>
                     <p class="text-2xl max-w-2xl">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Causa autem fuit huc veniendi ut quosdam.</p>
                 </div>
             </div>
