--- a/newhome.html
+++ b/newhome.html
@@ -4,20 +4,23 @@ layout: plain
 
 <!-- Header -->
 <header class="border-b-2 border-solid border-slate-700 py-5">
-    <div class="container mx-auto">
+    <div class="container max-w-screen-xl mx-auto flex content-center">
         <nav>
             <ul class="flex items-center list-none">
-                <li class="mr-8"><svg  xmlns="http://www.w3.org/2000/svg"  width="24"  height="24"  viewBox="0 0 24 24"  fill="none"  stroke="currentColor"  stroke-width="1.5"  stroke-linecap="round"  stroke-linejoin="round"  class="icon icon-tabler icons-tabler-outline icon-tabler-fingerprint"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M18.9 7a8 8 0 0 1 1.1 5v1a6 6 0 0 0 .8 3" /><path d="M8 11a4 4 0 0 1 8 0v1a10 10 0 0 0 2 6" /><path d="M12 11v2a14 14 0 0 0 2.5 8" /><path d="M8 15a18 18 0 0 0 1.8 6" /><path d="M4.9 19a22 22 0 0 1 -.9 -7v-1a8 8 0 0 1 12 -6.95" /></svg></li>
-                <li class="mr-8">Work</li>
+                <li class="mr-10"><svg  xmlns="http://www.w3.org/2000/svg"  width="24"  height="24"  viewBox="0 0 24 24"  fill="none"  stroke="currentColor"  stroke-width="1.5"  stroke-linecap="round"  stroke-linejoin="round"  class="icon icon-tabler icons-tabler-outline icon-tabler-fingerprint"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M18.9 7a8 8 0 0 1 1.1 5v1a6 6 0 0 0 .8 3" /><path d="M8 11a4 4 0 0 1 8 0v1a10 10 0 0 0 2 6" /><path d="M12 11v2a14 14 0 0 0 2.5 8" /><path d="M8 15a18 18 0 0 0 1.8 6" /><path d="M4.9 19a22 22 0 0 1 -.9 -7v-1a8 8 0 0 1 12 -6.95" /></svg></li>
+                <li class="mr-10">Work</li>
                 <li>About</li>
             </ul>
         </nav>
+        <div class="flex-1 text-right">
+            <button class="px-4 py-2 text-sm rounded-full">Contact me</button>
+        </div>
     </div>
 </header>
 
 <!-- Hero -->
 <section>
-    <div class="container mx-auto py-12">
+    <div class="container max-w-screen-xl mx-auto py-12">
         <div class="grid grid-cols-8 gap-4">
             <div class="col-span-5">
                 <h1 class="font-medium tracking-tighter text-7xl mb-3">Jordan Bowman,</h1>
@@ -31,7 +34,7 @@ layout: plain
 </section>
 
 <section>
-    <div class="container mx-auto">
+    <div class="container max-w-screen-xl mx-auto">
         <div class="grid grid-cols-8 gap-4">
             <!-- Maybe make these have subtle/moving svg background patterns? -->
             <!-- Need to change up the spacing a bit so it's not the exact same thing -->
