More work on new homepage

--- a/newhome.html
+++ b/newhome.html
@@ -25,8 +25,8 @@ layout: plain
     <div class="container px-6 max-w-screen-2xl mx-auto pt-16 pb-14">
         <div class="grid grid-cols-8 gap-4">
             <div class="md:col-span-5 col-span-full">
-                <h1 class="font-semibold tracking-tight text-7xl mb-3">Jordan Bowman,</h1>
-                <p class="font-semibold tracking-tight text-7xl">Product Designer</p>
+                <h1 class="font-semibold font-display tracking-tight text-7xl mb-3">Jordan Bowman,</h1>
+                <p class="font-semibold font-display tracking-tight text-7xl">Product Designer</p>
             </div>
             <div class="md:col-span-3 col-span-full">
                 <p class="font-normal text-xl">I create art that is both aesthetically pleasing and emotionally resonant. I also design user interfaces that are intuitive and user-friendly.</p>
@@ -104,7 +104,7 @@ layout: plain
                         <svg fill="none" height="56" viewBox="0 0 76 56" width="76" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><clipPath id="a"><path d="m.088867 0h75.9111v56h-75.9111z"/></clipPath><g clip-path="url(#a)" stroke="#52225e" stroke-linecap="round" stroke-linejoin="round" stroke-width="5.25"><path d="m38.0449 28v.0433"/><path d="m49.9229 16.1221c3.1495 3.1504 4.9188 7.4228 4.9188 11.8776 0 4.4547-1.7693 8.7271-4.9188 11.8776"/><path d="m61.8047 4.23926c3.1202 3.12007 5.5953 6.82414 7.284 10.90084 1.6887 4.0766 2.5578 8.446 2.5578 12.8586 0 4.4125-.8691 8.7819-2.5578 12.8585-1.6887 4.0767-4.1638 7.7808-7.284 10.9009"/><path d="m26.1512 39.8773c-3.1495-3.1505-4.9188-7.4229-4.9188-11.8776 0-4.4548 1.7693-8.7272 4.9188-11.8776"/><path d="m14.2617 51.7581c-3.1202-3.1201-5.5953-6.8242-7.28397-10.9009-1.68866-4.0766-2.55781-8.446-2.55781-12.8585 0-4.4126.86915-8.782 2.55781-12.8586 1.68867-4.0767 4.16377-7.78077 7.28397-10.90084"/></g></svg>
                     </div>
                     <div class="flex justify-end flex-col flex-1">
-                        <p class="text-2xl font-semibold">Be pragmatic</p>
+                        <p class="text-2xl font-semibold font-display">Be pragmatic</p>
                         <p class="mt-4">Explore. Adapt. Stay curious. Our team lives by these values, designing to inspire and create a better, more interesting world.</p>
                     </div>
                 </div>
@@ -114,7 +114,7 @@ layout: plain
                     <img src="https://cdn.prod.website-files.com/63dae19244d432799bf5baa4/63e083f447ab584c75ba3c35_cutting%20edge.svg"
                         loading="lazy" alt="">
                     <div class="flex justify-end flex-col flex-1">
-                        <p class="text-2xl font-semibold">Stand up for good</p>
+                        <p class="text-2xl font-semibold font-display">Stand up for good</p>
                         <p class="mt-4">Explore. Adapt. Stay curious. Our team lives by these values, designing to inspire and create a
                             better, more interesting world.</p>
                     </div>
@@ -125,7 +125,7 @@ layout: plain
                     <img src="https://cdn.prod.website-files.com/63dae19244d432799bf5baa4/63e083f447ab584c75ba3c35_cutting%20edge.svg"
                         loading="lazy" alt="">
                     <div class="flex justify-end flex-col flex-1">
-                        <p class="text-2xl font-semibold">Build great things</p>
+                        <p class="text-2xl font-semibold font-display">Build great things</p>
                         <p class="mt-4">Explore. Adapt. Stay curious. Our team lives by these values, designing to inspire and create a
                             better, more interesting world.</p>
                     </div>
@@ -136,7 +136,7 @@ layout: plain
                     <img src="https://cdn.prod.website-files.com/63dae19244d432799bf5baa4/63e083f447ab584c75ba3c35_cutting%20edge.svg"
                         loading="lazy" alt="">
                     <div class="flex justify-end flex-col flex-1">
-                        <p class="text-2xl font-semibold">Be team-oriented</p>
+                        <p class="text-2xl font-semibold font-display">Be team-oriented</p>
                         <p class="mt-4">Explore. Adapt. Stay curious. Our team lives by these values, designing to inspire and create a
                             better, more interesting world.</p>
                     </div>
@@ -147,7 +147,7 @@ layout: plain
                     <img src="https://cdn.prod.website-files.com/63dae19244d432799bf5baa4/63e083f447ab584c75ba3c35_cutting%20edge.svg"
                         loading="lazy" alt="">
                     <div class="flex justify-end flex-col flex-1">
-                        <p class="text-2xl font-semibold">Lead with care</p>
+                        <p class="text-2xl font-semibold font-display">Lead with care</p>
                         <p class="mt-4">Explore. Adapt. Stay curious. Our team lives by these values, designing to inspire and create a
                             better, more interesting world.</p>
                     </div>
@@ -158,7 +158,7 @@ layout: plain
                     <img src="https://cdn.prod.website-files.com/63dae19244d432799bf5baa4/63e083f447ab584c75ba3c35_cutting%20edge.svg"
                         loading="lazy" alt="">
                     <div class="flex justify-end flex-col flex-1">
-                        <p class="text-2xl font-semibold">Take ownership</p>
+                        <p class="text-2xl font-semibold font-display">Take ownership</p>
                         <p class="mt-4">Explore. Adapt. Stay curious. Our team lives by these values, designing to inspire and create a
                             better, more interesting world.</p>
                     </div>
@@ -178,13 +178,13 @@ layout: plain
 <section>
     <div class="container px-6 max-w-screen-2xl mx-auto">
         <div class="border-t-2 pt-16 pb-16 border-solid border-slate-700">
-            <h2 class="text-5xl font-semibold mb-4">Projects</h2>
+            <h2 class="text-5xl font-semibold font-display mb-4">Projects</h2>
             <p class="text-xl max-w-160">Website design & development for an on-demand accountability app for solopreneurs.</p>
         </div>
 
         <div class="grid md:grid-cols-3 gap-4 mb-16" style="grid-template-columns: 4fr 3fr 3fr;">
             <div class="md:col-span-1 max-w-full flex flex-col">
-                <h3 class="text-2xl font-medium mb-2">A design system</h3>
+                <h3 class="text-2xl font-semibold font-display mb-2">A design system</h3>
                 <p class="mb-4">Website design & development for an on-demand accountability app for solopreneurs.</p>
                 <div class="mb-4">
                     <a class="inline-block mr-3" style="color: #52225E;">
@@ -264,13 +264,13 @@ layout: plain
                 </div>
             </div>
             <div class="md:col-span-2 max-w-full flex">
-                <img src="/assets/img/project-example.png" class="rounded-lg">
+                <img src="/assets/img/project-example.png" class="rounded-xl">
             </div>
         </div>
 
         <div class="grid md:grid-cols-3 gap-4 mb-16" style="grid-template-columns: 4fr 3fr 3fr;">
             <div class="md:col-span-1 max-w-full flex flex-col">
-                <h3 class="text-2xl font-medium mb-2">A design system</h3>
+                <h3 class="text-2xl font-semibold font-display mb-2">A big, boring form</h3>
                 <p class="mb-4">Website design & development for an on-demand accountability app for solopreneurs.</p>
                 <div>
                     <a class="inline-block mr-3 py-1 px-2 rounded-full text-xs"
@@ -311,7 +311,7 @@ layout: plain
                 </div>
             </div>
             <div class="md:col-span-2 max-w-full flex">
-                <img src="/assets/img/project-example.png" class="rounded-lg">
+                <img src="/assets/img/project-example.png" class="rounded-xl">
             </div>
         </div>
     </div>
@@ -320,24 +320,51 @@ layout: plain
 
 <!-- Skills, tools, capabilities, what I do -->
 <!-- 
-I’m a generalist. I believe you can design better systems when you understand how they work, from top to bottom.
-So I keep learning as much as I can about UX/UI, programming, marketing, business, leadership, and the million other things in between.
+
 -->
 <section>
     <div class="container px-6 max-w-screen-2xl mx-auto">
         <div class="border-t-2 pt-16 pb-16 border-solid border-slate-700">
-            <h2 class="text-5xl font-semibold mb-4">Skills</h2>
-            <p class="text-xl">Website design & development for an on-demand accountability app for solopreneurs.</p>
+            <h2 class="text-5xl font-semibold font-display mb-4">Skills</h2>
+            <div class="grid md:grid-cols-6 gap-10">
+                <div class="md:col-span-2 max-w-full flex">
+                    <p class="text-xl">I’m a generalist. I believe you can design better systems when you understand how they work, from top to bottom. So I keep learning as much as I can about UX/UI, programming, marketing, business, leadership, and the million other things in between.</p>
+                </div>
+                <div class="md:col-span-1 max-w-full"></div>
+                <div class="md:col-span-1 max-w-full font-mono text-sm">
+                    <p class="block">Experience design</p>
+                    <p class="block">UI design</p>
+                    <p class="block">User research</p>
+                    <p class="block">Design systems</p>
+                    <p class="block">Prototyping</p>
+                    <p class="block">User flows</p>
+                    <p class="block">Copywriting</p>
+                    <p class="block">Info architecture</p>
+                </div>
+                <div class="md:col-span-1 max-w-full font-mono text-sm">
+                    <p class="block">Team leadership</p>
+                    <p class="block">Product strategy</p>
+                    <p class="block">Communication</p>
+                    <p class="block">Coaching</p>
+                    <p class="block">Facilitation</p>
+                </div>
+                <div class="md:col-span-1 max-w-full font-mono text-sm">
+                    <p class="block">CSS</p>
+                    <p class="block">Figma/Figjam</p>
+                </div>
+            </div>
+            
         </div>
     </div>
 </section>
 
 
-<!-- Resume & credentials, including link to download -->
+<!-- Resume & credentials, education in little badges, including link to download -->
+<!-- https://drive.google.com/file/d/1xwxXfELpG2_iwUBR8MjUQ0BzADyjaJ5z/view -->
 <section>
     <div class="container px-6 max-w-screen-2xl mx-auto">
         <div class="border-t-2 pt-16 pb-16 border-solid border-slate-700">
-            <h2 class="text-5xl font-semibold mb-4">Resume & street cred</h2>
+            <h2 class="text-5xl font-semibold font-display mb-4">Resume & street cred</h2>
             <p class="text-xl">Website design & development for an on-demand accountability app for solopreneurs.</p>
         </div>
     </div>
@@ -348,7 +375,7 @@ So I keep learning as much as I can about UX/UI, programming, marketing, busines
 <section>
     <div class="container px-6 max-w-screen-2xl mx-auto">
         <div class="border-t-2 pt-16 pb-16 border-solid border-slate-700">
-            <h2 class="text-5xl font-semibold mb-4">Kind words</h2>
+            <h2 class="text-5xl font-semibold font-display mb-4">Kind words</h2>
             <p class="text-xl">Website design & development for an on-demand accountability app for solopreneurs.</p>
         </div>
     </div>
@@ -360,7 +387,7 @@ So I keep learning as much as I can about UX/UI, programming, marketing, busines
 <section>
     <div class="container px-6 max-w-screen-2xl mx-auto">
         <div class="rounded-xl text-center text-white p-16" style="background-color: #1F3A2B; color: #F0F6F2;">
-            <p class="text-5xl font-semibold">Let's chat</p>
+            <p class="text-5xl font-semibold font-display">Let's chat</p>
         </div>
     </div>
 </section>
