--- a/newhome.html
+++ b/newhome.html
@@ -106,7 +106,7 @@ layout: plain
                     <img src="https://cdn.prod.website-files.com/63dae19244d432799bf5baa4/63e0839dd88ab866125f49fd_fresh%20angles.svg"
                         loading="lazy" alt="">
                     <div class="flex justify-end flex-col flex-1">
-                        <p class="text-2xl font-bold font-display">Be pragmatic</p>
+                        <p class="text-2xl font-bold font-display">Stay grounded</p>
                         <p class="mt-4">Explore. Adapt. Stay curious. Our team lives by these values, designing to inspire and create a better, more interesting world.</p>
                     </div>
                 </div>
@@ -127,7 +127,7 @@ layout: plain
                     <img src="https://cdn.prod.website-files.com/63dae19244d432799bf5baa4/63e083f447ab584c75ba3c35_cutting%20edge.svg"
                         loading="lazy" alt="">
                     <div class="flex justify-end flex-col flex-1">
-                        <p class="text-2xl font-bold font-display">Build lovable things</p>
+                        <p class="text-2xl font-bold font-display">Build with clarity</p>
                         <p class="mt-4">Explore. Adapt. Stay curious. Our team lives by these values, designing to inspire and create a
                             better, more interesting world.</p>
                     </div>
@@ -138,7 +138,7 @@ layout: plain
                     <img src="https://cdn.prod.website-files.com/63dae19244d432799bf5baa4/63e0839dd88ab866125f49fd_fresh%20angles.svg"
                         loading="lazy" alt="">
                     <div class="flex justify-end flex-col flex-1">
-                        <p class="text-2xl font-bold font-display">Be team-oriented</p>
+                        <p class="text-2xl font-bold font-display">Be a team player</p>
                         <p class="mt-4">Explore. Adapt. Stay curious. Our team lives by these values, designing to inspire and create a
                             better, more interesting world.</p>
                     </div>
